// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2WKUFuMRZfAQ7kNvgFSrI6D&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCQ6PMR-zAMoG1HhpKqSIXbg8SLGGdEUDm-XGc3X3kpXw&oe=667C9C78",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=pIEcPD9VA7AQ7kNvgEjsWkY&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCVsBrtUtVUj1-UTO3nnd7hZjWxlmj6vbFCF7skKXj4oA&oe=665AEBCB",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=NrevvjYocNUQ7kNvgGeB65c&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAGYSdHcG4QSJ_L-v7KUiAihDD7TGYcInr4LJfo2siusQ&oe=665B086B",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=tdvF9zNGEC4Q7kNvgEKKdzD&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAaA69rEZuaZ_uDVDMp0OkQWIsHLpTnOdzzblpbMhu6QQ&oe=665AF082",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/439064200_1017561226405063_8213471074013536032_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=eULRxh-j_XYQ7kNvgHjQ1Hq&_nc_ht=scontent-sjc3-1.xx&oh=00_AYDQG4Mk18G-tORAqrYBQctqNd6vqtSeeweSGyqCkuYEKw&oe=665B07C3",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=yD0zEIup1nMQ7kNvgEKvA7k&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAZSFUNWAenEAXZGsuepO4t1r2rvmdGV69DhP4vFKayIA&oe=665B02AD",
    "url": "https://www.facebook.com/photo/?fbid=10160954790708641&set=gm.602005851971871",
  },
  "siblingEvents": [],
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM MDT",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Calgary",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/308800346_490298226469886_3396126836502450064_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=XorBRYL7So4Q7kNvgGOzKe_&_nc_ht=scontent-sjc3-1.xx&oh=00_AYBjMc1J9UxsZYzhVjN6BGZ-p0YF4r8ijmKwBZ-lRM4mbg&oe=665AE666",
      },
      "type": "User",
      "url": "https://www.facebook.com/faccalgary",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Joining Jesus in the renewal of all things! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Calgary",
    "type": "PLACE",
    "url": "https://facebook.com/faccalgary",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "parentEvent": {
    "id": "1137956700212933",
  },
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/335064084_2456887831142064_5931438962804874346_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=6qlmgg03aggQ7kNvgH3wW_V&_nc_ht=scontent-sjc3-1.xx&oh=00_AYBR1pG-4pYCS7lFSpRlc9EelvZxmLo8zl-LCVaPE2aJCw&oe=665B189A",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "siblingEvents": [
    {
      "endTimestamp": 1681065000,
      "id": "1137956703546266",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681060500,
    },
    {
      "endTimestamp": 1681057800,
      "id": "1137956710212932",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681053300,
    },
    {
      "endTimestamp": 1681004700,
      "id": "1137956706879599",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681000200,
    },
  ],
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM MDT",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p960x960&_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=OZkaU6TrG_YQ7kNvgGvK1eo&_nc_ht=scontent-sjc3-1.xx&oh=00_AYDB62x3kj3foSUV_aPoeQrpD7QDiPIJHSX5cjAVEoPnKQ&oe=665B02F1",
    "url": "https://www.facebook.com/photo/?fbid=10167524860335261&set=gm.252144523936238",
  },
  "siblingEvents": [],
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM MDT",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/343412725_1217737712204297_6274770509266232269_n.jpg?stp=c50.34.938.938a_cp0_dst-jpg_s74x74&_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=rATo0QA82sQQ7kNvgGA1Uo0&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCZETfcZTG2yBB8Dg3Qra8bcVPicsxwzd24-DQCX0GQvA&oe=665AEBF4",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/334947163_707773884461245_8821128704004863167_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=36BzJzecAxEQ7kNvgHhluEK&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAWICj96-PzWUjBIKDMqtQtsTN24_DH4-DCNH6VN8tzCw&oe=665AFB7A",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "siblingEvents": [],
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5941,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2WKUFuMRZfAQ7kNvgFSrI6D&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCQ6PMR-zAMoG1HhpKqSIXbg8SLGGdEUDm-XGc3X3kpXw&oe=667C9C78",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM MDT",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=1tEO-CuSYwYQ7kNvgEQass1&_nc_ht=scontent-sjc3-1.xx&oh=00_AYD7FYIFJmwxoPnNbLt8eOzzzv5NOd_2IY3TW8FBTY2aTg&oe=665AE6A6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=K_hH1kvPYfEQ7kNvgEvREva&_nc_ht=scontent-sjc3-1.xx&oh=00_AYDnOS0xvtKj9yToKBJn7-vX2j8mN9vPq2nwzxk3MszChw&oe=665AF627",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/337126422_218835007357788_3208832482586448057_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=LohITVbbicwQ7kNvgH0ejYR&_nc_ht=scontent-sjc3-1.xx&oh=00_AYBLY8kAvUn2uIJ3NkeHzTcx30SQysQh2S2wz0P5Rye0lQ&oe=665B14B0",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "siblingEvents": [],
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=IzWDodpL1joQ7kNvgF61I4i&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAG-e09KDTkOVEOPJWF9hBrG5bL353RvR7-rsfN4mLBRg&oe=665AFA11",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=W5408ViJrqcQ7kNvgFRzeGh&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCg_THTJqsRgicS8MPkGlrt7mVniHTAklEe-ToX_liNDg&oe=665B1D7C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=pilGodO3tdkQ7kNvgEIqnHg&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAEV7h4NaDh0j1NysFDNAWrbE2O7C7zXtwhQDPenlBweA&oe=665B03B2",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/342967593_283796257308792_6891719300998916370_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=fuiOeMlgebAQ7kNvgEg883g&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAK7SEOYPurQ7OXsU9BnKjI9wcC72LcYOkEcLtWRLuvRw&oe=665B0527",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_p960x960&_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=ZMVbqkvKNrYQ7kNvgFzWuQY&_nc_ht=scontent-sjc3-1.xx&oh=00_AYDtKMUacQ5VhRWjtVTwQn3Zltoz_U3wMtKbb_cwbwGa-g&oe=665B106B",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/430081703_800418912125090_6763025059361084487_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=EEqqoFqaVsIQ7kNvgHC1Lx-&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCkLq1OG3ddW0bPrrfdAyefYkA45-jbo-tNEthHbQw5Lw&oe=665B1C74",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=tdvF9zNGEC4Q7kNvgEKKdzD&_nc_ht=scontent-sjc3-1.xx&oh=00_AYAaA69rEZuaZ_uDVDMp0OkQWIsHLpTnOdzzblpbMhu6QQ&oe=665AF082",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our weste",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/348823734_2075221392674298_547668571002268793_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=pFczTRO5RE8Q7kNvgEAxgKT&_nc_ht=scontent-sjc3-1.xx&oh=00_AYB1V9W5VMdhqxnzw85ymYoabxlJdZfI1_QtMQ6pioaTZQ&oe=665AEB38",
    "url": "https://www.facebook.com/photo/?fbid=1273089803342464&set=gm.977705193657933",
  },
  "siblingEvents": [],
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with no location 1`] = `
{
  "description": "Birželio 1 d., ketvirtadienį, 16 val. vyks virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“, kuriame dėstytojai, studentai, absolventai dalinsis savo įkvepiančiomis istorijomis, įžvalgomis apie studijų programą bei mokytojo darbą.

Mokomojo dalyko pedagogika: istorija ir geografija bakalauro programa vykdoma Kaune ir Vilniuje.

Registracija: https://forms.office.com/e/DvfJn8q27D",
  "endTimestamp": 1685629800,
  "formattedDate": "Thursday, June 1, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100064711685049",
      "name": "VDU Švietimo akademija",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274685098_5567767706572475_1252348629032694585_n.jpg?stp=cp0_dst-jpg_p74x74&_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=11rg-xddKV4Q7kNvgGhD9y-&_nc_ht=scontent-sjc3-1.xx&oh=00_AYD5VmpY3xZ1trCYHQqoOnUxYTAhdyFkF0vzTpajo-TkCg&oe=665B08BB",
      },
      "type": "User",
      "url": "https://www.facebook.com/VDU.svietimo.akademija",
    },
  ],
  "id": "782998640138266",
  "isOnline": false,
  "location": null,
  "name": "Virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“ ",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "6986078114741420",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/349523504_596340745925274_3047478399487167752_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Ug3itfxfET4Q7kNvgE1UV2f&_nc_ht=scontent-sjc3-1.xx&oh=00_AYA6QcM4udpDAHpbVAyitQOTZx77lBwgOKA8JB5TAc_tNQ&oe=665B0722",
    "url": "https://www.facebook.com/photo/?fbid=6986078114741420&set=gm.782998683471595",
  },
  "siblingEvents": [],
  "startTimestamp": 1685624400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/782998640138266/",
  "usersResponded": 3,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p74x74&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2WKUFuMRZfAQ7kNvgFSrI6D&_nc_ht=scontent-sjc3-1.xx&oh=00_AYCQ6PMR-zAMoG1HhpKqSIXbg8SLGGdEUDm-XGc3X3kpXw&oe=667C9C78",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02exvtktPMVkRgRZbdfgXPpvCuKvj1ADJrzcyKpYUcSMNWfm9uHmXLcwaisXSNC3vbl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;
